--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?aojion#1" target="_blank">首页</a> | <a href="https://d19vw3711v9lks.cloudfront.net/1?qlggbnbf" target="_blank">动态网</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/2?hgfixb" target="_blank">大纪元</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/4?xnbunzk" target="_blank">看中国</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/pHh5q?cpwqnzmf" target="_blank">新生网</a> | <a href="https://d78f5frq5siq8.cloudfront.net/tktpt?vkbcuaz" target="_blank">阿波罗网</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/Mjpvu?brhtskh" target="_blank">干净世界</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/10?rnrfsjf" target="_blank">退党服务</a> | <a href="https://doyvntponycdh.cloudfront.net/Rffqf?btqmukyu" target="_blank">明慧广播</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/nw9Vn?wllxvzgra" target="_blank">传奇时代</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/AF9AG?bwyiodcd" target="_blank">新境界影视</a> | <a href="https://d1fejrztdgsube.cloudfront.net/zqMQA?boxkq" target="_blank">文昭谈论</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/7?cjudohnaf" target="_blank">明慧</a></p><p><a href="https://dld25pfif4r64.cloudfront.net/9?slfdolzc" target="_blank">大法</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/3?wfbjmjef" target="_blank">新唐人</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/obAhT?ldghk" target="_blank">人民报</a> | <a href="https://d3caox32lipp7h.cloudfront.net/xXNHu?jqcbfh" target="_blank">放光明</a> | <a href="https://dycg1eql8aigr.cloudfront.net/5?ucqhis" target="_blank">新纪元</a> | <a href="https://d3bo5docy69ast.cloudfront.net/6?urdovwz" target="_blank">希望之声</a> | <a href="https://divmj5v44rbg.cloudfront.net/11?nygwej" target="_blank">无界网络</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/Pueji?pmfhfta" target="_blank">追查国际</a> | <a href="https://d2torrlf4djx10.cloudfront.net/16?bueyz" target="_blank">明慧之窗</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/LdvzZ?zxjqmhrki" target="_blank">细语人生</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/fBn3r?eyfgpiowx" target="_blank">新世纪影视</a> | <a href="https://db8nk66phkh66.cloudfront.net/PUWMb?bujfomur" target="_blank">江峰时刻</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/8?athkopob" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?sqsrjycac#1" target="_blank">首页</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/1?ystmkz" target="_blank">动态网</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/2?wauvec" target="_blank">大纪元</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/4?wtvgtlee" target="_blank">看中国</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/pHh5q?czgmo" target="_blank">新生网</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/tktpt?zrsol" target="_blank">阿波罗网</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/Mjpvu?sqsdzb" target="_blank">干净世界</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/10?wooybif" target="_blank">退党服务</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/Rffqf?dvumsue" target="_blank">明慧广播</a> | <a href="https://d14a0yccee2yym.cloudfront.net/nw9Vn?bmjyu" target="_blank">传奇时代</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/AF9AG?frazmtvee" target="_blank">新境界影视</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/zqMQA?sarbclk" target="_blank">文昭谈论</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/7?loyqiy" target="_blank">明慧</a></p><p><a href="https://d3q99y09eaol9n.cloudfront.net/9?mvzfg" target="_blank">大法</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/3?jurgxhg" target="_blank">新唐人</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/obAhT?odttzsnrf" target="_blank">人民报</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/xXNHu?coctsqzff" target="_blank">放光明</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/5?ciane" target="_blank">新纪元</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/6?ewmgq" target="_blank">希望之声</a> | <a href="https://d3siwajeg0khti.cloudfront.net/11?hdxaqdkx" target="_blank">无界网络</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/Pueji?djtjw" target="_blank">追查国际</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/16?hjwiisnxx" target="_blank">明慧之窗</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/LdvzZ?rfzxcnqpt" target="_blank">细语人生</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/fBn3r?iaopmnno" target="_blank">新世纪影视</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/PUWMb?ooxcoes" target="_blank">江峰时刻</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/8?nrllae" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290623-Untitled-design-13-320x200.jpg"><p align="center">【直播】川普遇刺最新进展 记者连线</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290623-Untitled-design-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1" title="CECC幕僚长：阻中共活摘 确保美企不被利用""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290403.md#1" title="川普遭枪击 盘点美国史上总统遇刺事件""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290404-GettyImages-2161339333-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290078.md#1" title="美第六代战机如虎添翼 XQ-67A首飞曝光""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290089-8275788-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290283.md#1">朗诵词：反迫害25周年 法轮功美国华府烛光夜悼</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1">美联储降息 房价恐仍然不会下降</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290519.md#1">720反迫害 法国法轮功学员中领馆前和平抗议</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290552.md#1">“雄鹿满月”将伴随水土火星在7月夜空升起</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290035.md#1">个人理财：买房时应特别注意的6个危险信号</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290681.md#1">台青“搭侨”与FASCA青年洛杉矶相见欢</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290624.md#1">【时事金扫描】三峡大坝泄洪 郑州再现洪水噩梦</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290283.md#1">朗诵词：反迫害25周年 法轮功美国华府烛光夜悼</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1">美联储降息 房价恐仍然不会下降</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290519.md#1">720反迫害 法国法轮功学员中领馆前和平抗议</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290552.md#1">“雄鹿满月”将伴随水土火星在7月夜空升起</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290035.md#1">个人理财：买房时应特别注意的6个危险信号</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290619.md#1">美司法部长：我们不会容忍任何形式的暴力</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290652.md#1">民主党参议员：川普遭暗杀是美国黑暗的一天</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290615.md#1">川普遇袭后 纽约警局加强川普大厦安全戒备</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1">CECC幕僚长：阻中共活摘 确保美企不被利用</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289354.md#1">中共太子党动向密集曝光 胡耀邦孙女任新职</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a><br>
@@ -59,6 +59,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290221.md#1">川普遇袭受伤：我感到子弹撕裂皮肤</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290624.md#1">【时事金扫描】三峡大坝泄洪 郑州再现洪水噩梦</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287884.md#1">北上消费致澳门百业萧条 香港或步后尘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290069.md#1">【菁英论坛】外逃厅官爆 退休官员逾半被抓</a><br>
@@ -106,7 +107,6 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287904.md#1">【时事金扫描】北京玩一石几鸟 北约瞄准亚太</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287882.md#1">【新闻欣视角】中国进入互害社会？铁西上热搜</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287706.md#1">美将推动全面抗中共法案 专家：重要转折点</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287343.md#1">香港楼市小阳春已过 新盘开价跌穿2015年水平</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
 <tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d156jw4l50gy3n.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,657</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
